# gobject-modern-hello-world

./: .gitignore  Makefile.am  README  colorbox.c  colorbox.h  configure.ac  main.c  point.c  point.h
demos/c/: simple.c
demos/js/: simple.js
demos/python/: moving.py  simple.py
src/: abc.h  abccolorbox.c  abccolorbox.h  abcpoint.c  abcpoint.h
